--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,10 @@
     font-family: 'Great Vibes', cursive;
     font-weight: 700;
 }
+.display-26 {
+    font-family:"Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif";
+    font-weight: 100;
+}
 
 
 /*** Navbar Start ***/
